# ytransport

./: .flake8  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: python-app.yml
docs/: big_picture.iuml
migrations/ytransport/: 0_20220130143000_init.sql  1_20220204235105_update.sql  2_20220211225617_update.sql
tests/: conftest.py  test_action.py  test_ytransport.py
ytransport/: action.py  conf.py  main.py
ytransport/models/: __init__.py
ytransport/templates/: base.html  register.html
ytransport/templates/_partials/: top_menu.html
ytransport/views/: __init__.py  user.py
